[gd_scene load_steps=3 format=3 uid="uid://5tl3mx55ruij"]

[ext_resource type="Script" uid="uid://dsvte8pcbftii" path="res://scripts/game_over_screen.gd" id="1_xeevv"]

[sub_resource type="Theme" id="Theme_ieorl"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xeevv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -138.0
offset_top = -165.09
offset_right = 138.0
offset_bottom = -64.09
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_ieorl")

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.26
offset_top = 4.64499
offset_right = 200.74
offset_bottom = 102.645
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ieorl")

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="score_label" type="Label" parent="VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Final score:"

[node name="score_value" type="Label" parent="VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "05:00"
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="pickups_count_label" type="Label" parent="VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21
text = "Number of Pickups:"

[node name="pickups_count_value" type="Label" parent="VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21
text = "05:00"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="time_elapsed_label" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21
text = "Time elapsed:"

[node name="time_elapsed_value" type="Label" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21
text = "05:00"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="time_left_label" type="Label" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21
text = "Time leftover:"

[node name="time_left_value" type="Label" parent="VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21
text = "05:00"
horizontal_alignment = 2

[node name="GameOverText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 149.0
offset_bottom = 253.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 120
text = "GAME OVER"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
